tests/ui/derive/fail_api_schema_blank_rule_message.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::ApiSchema)]
struct BlankRuleMessage {
    #[validate(required(message = ""))]
    email: String,
}

fn main() {}
